# MomentTransfer

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .safety-policy.json  COHESION_ANALYSIS.md  COMPLETION_REPORT.md  DELIVERY_CHECKLIST.md  IMPLEMENTATION_CONFIG_MODIFICATION_DETECTION.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  RELEASE.md  USER_GUIDE_CONFIG_MODIFICATION.md  batch.py  cli.py  config.default.json  config.json  creator.py  environment.yml  gui.py  gui_main.py  input.json  pyproject.toml  requirements-dev.txt  requirements.txt  styles.dark.qss  styles.qss  test_gui.py  test_new_config.py  test_sidebar_hover.py  test_state_banner_integration.py
data/: data.mtfmt  default.format.json  input.json  output_result.json
docs/: API.md  BATCH_USAGE.md  CLI_GUI_LOGIC_ALIGNMENT.md  CLI_HELPERS.md  CONFIG_FORMAT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FILE_DIALOG_IMPROVEMENT.md  FILE_VALIDATION_STATUS.md  FILE_VALIDATION_STATUS_DEV.md  FILE_VALIDATION_STATUS_QUICK_REF.md  OPTIMIZATION_CHECKLIST.md  PERFORMANCE.md  QUICKSTART.md  REDO_STATE_MANAGEMENT.md  SIDEBAR_HOVER_FEATURE.md  SPECIAL_FORMAT_MAPPING_V2.md  SPECIAL_FORMAT_PARSER.md  STARTUP_OPTIMIZATION.md  STARTUP_OPTIMIZATION_RESULT.md  USER_GUIDE.md
examples/: per_file_config_demo.py
gui/: __init__.py  background_worker.py  batch_file_manager.py  batch_history.py  batch_manager.py  batch_manager_batch.py  batch_manager_files.py  batch_manager_preview.py  batch_manager_ui.py  batch_state.py  batch_thread.py  batch_ui_utils.py  canvas.py  compatibility_manager.py  config_manager.py  delay_scheduler.py  dialog_helpers.py  dialogs.py  error_handling.py  event_manager.py  file_loading_progress.py  global_error_handler.py  global_filter_panel.py  global_state_manager.py  initialization_manager.py  initialization_state.py  layout_manager.py  log_manager.py  main_window.py  managers.py  paged_table.py  part_manager.py  progress_config.py  project_manager.py  quick_select_dialog.py  signal_bus.py  slide_sidebar.py  state_banner.py  status_manager.py  status_message_queue.py  (+5 more)
plugins/: default_transformation.py  example_coord_systems.py  json_output.py
src/: CL_main.py  __init__.py  __main__.py  batch_config.py  batch_processor.py  cache.py  calculator_factory.py  cli_helpers.py  config.py  data_loader.py  data_validator.py  execution.py  file_cache.py  format_registry.py  geometry.py  gui_main.py  logging_config.py  logging_system.py  moment_center_utils.py  part_inference.py  performance.py  physics.py  plugin.py  registry_cli.py  special_format_detector.py  special_format_parser.py  special_format_processor.py  utils.py  validator.py
tests/: conftest.py  test_architecture.py  test_atomic_write.py  test_batch_cli_integration.py  test_batch_cli_options.py  test_batch_config.py  test_batch_history_improvements.py  test_batch_multiselect_fix.py  test_batch_process.py  test_batch_registry.py  test_batch_thread_helpers.py  test_batch_thread_special_branch.py  (+104 more)
(+24 files in other folders)
