[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "momentconversion"
version = "0.1.0rc1"
description = "坐标系间的力/力矩变换与气动力系数计算工具"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "least", email = "least106@163.com" } ]
keywords = ["aero", "moment", "coordinate", "wind-tunnel"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
momentconversion-cli = "cli:cli"
momentconversion-gui = "gui_main:main"

[project.urls]
"Homepage" = "https://github.com/least106/MomentConversion"
"Repository" = "https://github.com/least106/MomentConversion"

[tool.setuptools]
packages = { find = {} }

[tool.black]
line-length = 88
target-version = ['py38', 'py310', 'py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
